
   - is_all_alnum/1
   - is_empty/1
   - to_utf8_code_unit_list/2
   - to_utf16_code_unit_list/2
   - from_utf8_code_unit_list/2
   - from_utf16_code_unit_list/2
   - det_remove_prefix/3
   - compare_ignore_case_ascii/3
   - to_rev_char_list/2

* The following predicates have been added to the map module:

   - foldl5/12
   - foldr5/12

* The following predicate has been added to the set modules:

   - intersection_and_differences

* We have a added a new type, maybe_errors, to the maybe module.

  The following predicate and function have been added to the maybe module:

   - fold2_maybe/6
   - maybe_default/2
   - pred_to_maybe/1
   - func_to_maybe/1

* The following predicates and functions have been added to the calendar
  module:

   - int_to_month/2
   - det_int_to_month/1
   - int0_to_month/2
   - det_int0_to_month/1
   - month_to_int/1
   - month_to_int0/1
   - same_date/1

* We have added a new module, psqueue, that implements a priority search
  queue ADT.  This is a blend between a priority queue and a map.  This was
  contributed by Matthias Güdemann.

* The following predicates and functions have been added to the int module:

  - all_true_in_range/3
  - nabs/1

* We have added a predicate named is_dummy_context to the term module.

* The following predicates and functions have been added to the list module:

   - any_true/2
   - any_false/2
   - reverse_prepend/2
   - reverse_prepend/3
   - take_while/4
   - take_while/3
   - take_while/2
   - drop_while/3
   - drop_while/2
   - one_or_more_to_list/1
   - list_to_one_or_more/2
   - list_to_one_or_more_det/2

* The takewhile/4 predicate has been deprecated in the list module,
  take_while/4 can be used instead.

* The take/3 and drop/3 predicates in the list module have been modified
  so that they fail if their first argument is less than zero.

* The split_upto/4 and take_upto/3 predicates and take_upto/2 function
  in the list module have been modified so that they throw an exception